--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "generate": "^0.14.0",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "jest": "^29.7.0",
